--- a/packages/natum-ui/src/FilePreviewPanel/FilePreviewPanel.module.scss
+++ b/packages/natum-ui/src/FilePreviewPanel/FilePreviewPanel.module.scss
@@ -3,7 +3,7 @@
 .scrim {
   position: fixed;
   inset: 0;
-  z-index: 1050;
+  z-index: var(--z-overlay);
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
 
@@ -29,7 +29,7 @@
   position: fixed;
   inset-block: 0;
   inset-inline-end: 0;
-  z-index: 1050;
+  z-index: var(--z-modal);
   inline-size: 100%;
   display: flex;
   flex-direction: column;
